# ecomm-prod-assistant

./: pyproject.toml  requirements.txt  scrapper_ui.py
data/: product_reviews.csv
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_Ingestion.py  data_scrapper.py
prod_assistant/logger/: __init__.py
prod_assistant/utils/: model_loader.py
