[project]
name = "ecomm-prod-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.13.0",
    "fastapi>=0.135.3",
    "html5lib>=1.1",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-astradb>=1.0.0",
    "langchain-core>=1.2.27",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "lxml>=6.0.2",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.24",
    "ragas>=0.4.3",
    "selenium>=4.41.0",
    "streamlit>=1.56.0",
    "structlog>=25.5.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.44.0",
]
